Fixed warnings and alignment issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -451,6 +451,11 @@ body.dark {
     #footer, .bottom {
         border-top: 1px solid $gray-900;
     } 
+    .bottom {
+        a {
+            color: $gray-600;
+        }
+    }
     .content-list {
         li {
         border-top: 1px solid $gray-900;
